# agentic-os

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  compose.total-recall.yaml  compose.tracing.yaml  compose.yaml  goal.md  litellm-config.yaml  litmus.sh  mvp_test.sh  setup-models.sh  spark-proxy.conf  total-recall-config.yaml
orchestrator/: Cargo.toml  Dockerfile  compose.yaml
orchestrator/migrations/: V10__litellm_call_ledger.sql  V11__litellm_call_attempt_reliability.sql  V12__context_artifacts.sql  V13__context_compiler_ledger.sql  V14__vllm_cache_observations.sql  V15__local_reasoning_policy.sql  V16__orchestration_policies.sql  V17__add_implement_request_intent.sql  V18__adversarial_harness_mvp.sql  V19__litellm_context_window_audit.sql  V1__baseline.sql  V20__architecture_spec_artifact_type.sql  V2__execution_feedback.sql  V3__inline_failure_signatures.sql  V4__trajectory_lineage.sql  V5__feature_records.sql  V6__expanded_feature_signals.sql  V7__context_decision_ledger.sql  V8__fix_context_decision_ledger_enum_constraints.sql  V9__request_classifications.sql
orchestrator/src/: adversarial_harness.rs  adversarial_harness_callbacks.rs  anthropic.rs  anthropic_user_content.rs  app_router.rs  auth.rs  client_capture.rs  client_capture_types.rs  context_artifacts.rs  context_compiler.rs  context_compiler_event_artifacts.rs  context_compiler_instructions.rs  context_compiler_total_recall.rs  context_ledger.rs  context_packing.rs  context_packing_endpoint.rs  context_packing_tests.rs  context_rendering.rs  context_rendering_event_lines.rs  db.rs  (+206 more)
(+319 files in other folders)
